fix overflow

--- a/src/static/styles/index.css
+++ b/src/static/styles/index.css
@@ -1,8 +1,12 @@
+/* Fix overflow */
+
+body {
+    overflow: hidden;
+}
+
 /* Button */
 
-.ant-btn-icon-only {
-    
-}
+.ant-btn-icon-only {}
 
 /* Card */
 
